# advent-of-code-2024

./: Cargo.toml  README.md  fetch_file.py  shell.nix
benches/: bench1.rs  bench11.rs  bench13.rs  bench2.rs  bench3.rs  bench4.rs  bench5.rs  bench6.rs  bench7.rs  bench8.rs  bench9.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_trait.rs  lib.rs  main.rs
