[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"

[dev-dependencies]
divan = "0.1.16"

[lib]
name = "daylibs"
path = "src/lib.rs"

[features]
all-benches = []

[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "bench2"
harness = false

[[bench]]
name = "bench3"
harness = false

[[bench]]
name = "bench4"
harness = false

[[bench]]
name = "bench5"
harness = false

[[bench]]
name = "bench6"
harness = false

[[bench]]
name = "bench7"
harness = false

[[bench]]
name = "bench8"
harness = false

[[bench]]
name = "bench9"
harness = false

[[bench]]
name = "bench10"
harness = false

[[bench]]
name = "bench11"
harness = false
